--- a/cursos/espanol/programacion/teoria/1_variables.ipynb
+++ b/cursos/espanol/programacion/teoria/1_variables.ipynb
@@ -156,6 +156,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Guardar texto\n",
+    "\n",
+    "Tambien podemos guardar texto en nuestras variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_texto = \"Hola alumno. Bienvenido!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hola alumno. Bienvenido!'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mi_texto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Importante\n",
     "\n",
     "Las variables con mayusculas son distintas de las que estan en minusculas aun cuando tengan el mismo nombre:"
