--- a/cursos/espanol/programacion/teoria/0_intro.ipynb
+++ b/cursos/espanol/programacion/teoria/0_intro.ipynb
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notemos que para saber si un numero es par o impar podemos dividirlo por 2 y si el resto es cero entonces quiere decir que es para y si el resto es uno quiere decir que es impar"
+    "Notemos que para saber si un numero es par o impar podemos dividirlo por 2 y si el resto es cero entonces quiere decir que es par y si el resto es uno quiere decir que es impar"
    ]
   },
   {
