--- a/cursos/espanol/programacion/teoria/1_variables.ipynb
+++ b/cursos/espanol/programacion/teoria/1_variables.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_otro_valor = 5"
+    "mi_otro_valor = 5.4"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m + 20"
+    "m + 20 + mi_otro_valor"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "source": [
     "### Ejercicio 2: \n",
     "\n",
-    "Guardar el valor 10 en una variable llamada y"
+    "Guardar el valor 10.3 en una variable llamada y"
    ]
   },
   {
@@ -126,7 +126,7 @@
    "source": [
     "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
     "\n",
-    "y = 10"
+    "y = 10.3"
    ]
   },
   {
@@ -181,6 +181,33 @@
    "outputs": [],
    "source": [
     "mi_texto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 4:\n",
+    "\n",
+    "Crear una variable que contenga un texto con tu nombre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 3 {display-mode:\"form\"}\n",
+    "\n",
+    "mi_nombre = \"Hernan\" #mi nombre es Hernan :)"
    ]
   },
   {
@@ -282,6 +309,13 @@
    "outputs": [],
    "source": [
     "mi-var = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio extra: solucionar los errores anteriores"
    ]
   },
   {
