--- a/cursos/espanol/programacion/teoria/3_if.ipynb
+++ b/cursos/espanol/programacion/teoria/3_if.ipynb
@@ -14,12 +14,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aqui es donde le empezamos a decir a la computadora como queremos que se comporte."
+    "Aqui es donde le empezamos a decir a la computadora como queremos que se comporte.\n",
+    "\n",
+    "Prestemos atencion a como cambia el valor guardado en la variable c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +51,7 @@
        "'Hola'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +81,7 @@
        "'a es menor a b'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,11 +91,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Solo cambia en valor cuando la condicion que aparece luego de if es verdadera (True)\n",
+    "\n",
+    "Notemos que la palabra if (si en ingles) esta seguida de una condicion y luego de dos puntos (:) y ademas el codigo que esta abajo esta indentado, es decir, esta movido cuatro espacios hacia la derecha. Esto significa que todo ese codigo que esta debajo del if e indentado a la derecha solo va a ser ejecutado si la condicion del if es verdadera."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1:\n",
+    "\n",
+    "Asignar un valor a la variable edad para que la variable mayor_de_edad obtenga el valor \"SI es mayor de edad\" "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "edad = \n",
+    "mayor_de_edad = \"NO es mayor de edad\"\n",
+    "if edad > 18:\n",
+    "    mayor_de_edad = \"SI es mayor de edad\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
+    "\n",
+    "edad = 30\n",
+    "mayor_de_edad = \"NO es mayor de edad\"\n",
+    "if edad > 18:\n",
+    "    mayor_de_edad = \"SI es mayor de edad\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Ejercicio 2:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "es_par = "
+   ]
   }
  ],
  "metadata": {
