--- a/cursos/espanol/programacion/teoria/2_condiciones.ipynb
+++ b/cursos/espanol/programacion/teoria/2_condiciones.ipynb
@@ -490,6 +490,234 @@
     "edad = 20\n",
     "(edad > 18) and (edad < 90)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ba3ceca-adc8-4bf2-ae27-c201c8988846",
+   "metadata": {},
+   "source": [
+    "## Guardar el valor True o False en una variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34cbaaf5-8a95-4527-a9ab-4e7fc059f4bc",
+   "metadata": {},
+   "source": [
+    "Ya vimos que en nuestras varibles podemos guardar numeros y texto. Ahora veremos como guardar valores de verdadero o falso. Solo tenemos que escribir la palabra **True** o **False** con mayuscula la primera letra de ambas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "633fc5e7-3fee-4d39-b37e-153b44260fc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable1 = True\n",
+    "variable2 = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f031850a-4d12-4790-8f0c-76acef075245",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2b2fe469-8a2a-4919-8faf-a756091da15a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "196ced56-2e60-4e90-96dd-adb1d1694a66",
+   "metadata": {},
+   "source": [
+    "Tambien podemos guardar en una variable el valor **True** o **False** del resultado de una condicion:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1668aeda-cb7d-4f8d-b8c1-6df16ae3ee46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable3 = 2 < 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "382098dc-2dcb-4382-980f-3155ebb7fc8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b1e4e86d-c97b-4c93-8ff2-29ec726fb6fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable4 = 2 > 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "01e3c936-9639-4a32-82de-81f6858d6e86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variable4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e584df2d-8ba5-419b-96d5-0eae585bd018",
+   "metadata": {},
+   "source": [
+    "### Ejercicio extra: \n",
+    "\n",
+    "Hacer combinaciones con las palabras **True**, **False**, **and** y **or** y ver sus resultados:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "86463c22-8d6d-474e-bb92-30aeebfd9add",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ejemplo 1:\n",
+    "\n",
+    "True and True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6e9e2560-1f88-49f4-ae6f-374802a9a5c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ejemplo 2:\n",
+    "\n",
+    "False or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a7ba64d5-cef1-4441-aa15-4ece1bcd8cbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Ejemplo 3:\n",
+    "\n",
+    "False and True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68bf0740-d09b-45c0-a46b-a624cd8682eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Haz a continuacion tus pruebas:"
+   ]
   }
  ],
  "metadata": {
