--- a/cursos/espanol/programacion/teoria/0_intro.ipynb
+++ b/cursos/espanol/programacion/teoria/0_intro.ipynb
@@ -352,11 +352,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ejercicio extra: solucionar los errores anteriores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html)"
+   ]
   }
  ],
  "metadata": {
