--- a/cursos/espanol/programacion/teoria/1_variables.ipynb
+++ b/cursos/espanol/programacion/teoria/1_variables.ipynb
@@ -319,11 +319,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html)"
+   ]
   }
  ],
  "metadata": {
