--- a/cursos/espanol/programacion/teoria/2_condiciones.ipynb
+++ b/cursos/espanol/programacion/teoria/2_condiciones.ipynb
@@ -718,6 +718,30 @@
    "source": [
     "# Haz a continuacion tus pruebas:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a46bf97-df6b-4e93-a307-0d5f24c9b807",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18b100f7-573d-4346-ba4e-b99c5109b83f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95f8c6a5-2d7f-4024-a5e5-a732a1e34526",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html)"
+   ]
   }
  ],
  "metadata": {
