--- a/cursos/espanol/programacion/teoria/3_if.ipynb
+++ b/cursos/espanol/programacion/teoria/3_if.ipynb
@@ -152,6 +152,27 @@
    "source": [
     "es_par = "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fin: [Volver al contenido del curso](https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html)"
+   ]
   }
  ],
  "metadata": {
