--- a/cursos/espanol/programacion/teoria/5_funciones.ipynb
+++ b/cursos/espanol/programacion/teoria/5_funciones.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "A los resultados de estas funciones los podemos guardar tambien en variables y luego utilizarlos.\n",
     "\n",
-    "### Ejercicio: \n",
+    "## Ejercicio 1: \n",
     "\n",
     "Adivina cual sera el valor de **z** en el siguiente ejemplo:"
    ]
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejercicio 1:\n",
+    "## Ejercicio 2:\n",
     "\n",
     "Crear una funcion llamada menor que reciba como entrada dos valores y devuelva el valor del menor de los dos"
    ]
@@ -207,8 +207,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
+    "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
     "\n",
+    "def menor(x,y):\n",
+    "    if x < y:\n",
+    "        salida = x\n",
+    "    else:\n",
+    "        salida = y\n",
+    "    return salida"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Como evaluar programas y funciones\n",
+    "\n",
+    "Como hicimos con nuestra funcion del ejercicio anterior **menor(x,y)** donde probamos tres ejemplos para ver si su resultado es el esperado. Eso haremos de ahora en mas con todas las funciones que creemos y utilizaremos la palabra **assert** para mostrar si el resultado de cada caso de prueba (Test Case en ingles) es correcto o no. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def menor(x,y):\n",
     "    if x < y:\n",
     "        salida = x\n",
@@ -222,14 +245,111 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "assert menor(3,5) == 3, \"Error en el Test 1\"\n",
+    "assert menor(20,11) == 11, \"Error en el Test 2\"\n",
+    "assert menor(-10,-30) == -30, \"Error en el Test 3\"\n",
+    "assert menor(15,15) == 15, \"Error en el Test 4\"\n",
+    "\"Felicitaciones todos los casos fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este caso nuestra funcion ha dado la respuesta correcta en los cuatro casos de prueba y no se observa ningun error. \n",
+    "\n",
+    "Veamos la siguiente funcion menor que tiene un error:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def menor(x,y):\n",
+    "    salida = 0\n",
+    "    if x < y:\n",
+    "        salida = x\n",
+    "    elif x > y:\n",
+    "        salida = y\n",
+    "    return salida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert menor(3,5) == 3, \"Error en el Test 1\"\n",
+    "assert menor(20,11) == 11, \"Error en el Test 2\"\n",
+    "assert menor(-10,-30) == -30, \"Error en el Test 3\"\n",
+    "assert menor(15,15) == 15, \"Error en el Test 4\"\n",
+    "\"Felicitaciones todos los casos fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui vemos que el Test 4 no funciona como deberia. Si ocurre esto debemos arreglar nuestra funcion para que pase todos los tests."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejercicio 3:\n",
+    "\n",
+    "Escribir el contenido de la funcion es_par(x) para que devuelva True como resultado si el numero x ingresado como entrada es par y que devuelva False si el numero x ingresado es impar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def es_par(x):\n",
+    "    #Escribe a continuacion el contenido de la funcion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora ejecuta el siguiente codigo para ver si tu solucion pasa todos los casos de uso correctamente:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert es_par(1) == False, \"Error en el Test 1\"\n",
+    "assert es_par(2) == True, \"Error en el Test 2\"\n",
+    "assert es_par(11) == False, \"Error en el Test 3\"\n",
+    "assert es_par(10004) == True, \"Error en el Test 4\"\n",
+    "\"Felicitaciones todos los casos fueron pasados exitosamente!!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 3 {display-mode:\"form\"}\n",
+    "\n",
+    "def es_par(x):\n",
+    "    salida = False\n",
+    "    if x%2 == 0:\n",
+    "        salida = True\n",
+    "    return salida"
+   ]
   },
   {
    "cell_type": "markdown",
