--- a/cursos/espanol/programacion/teoria/3_if.ipynb
+++ b/cursos/espanol/programacion/teoria/3_if.ipynb
@@ -14,9 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aqui es donde le empezamos a decir a la computadora como queremos que se comporte.\n",
-    "\n",
-    "Prestemos atencion a como cambia el valor guardado en la variable c"
+    "Comencemos prestando atencion a como cambia el valor guardado en la variable **a**. Tratemos de adivinar su valor:"
    ]
   },
   {
@@ -25,9 +23,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 5\n",
-    "b = 6\n",
-    "c = \"Hola\""
+    "#Cual sera el valor de a cuando ejecutemos esta celda?\n",
+    "a = 0\n",
+    "a = a + 1\n",
+    "a = a + 2\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otro ejemplo. Intentemos adivinar el valor de b"
    ]
   },
   {
@@ -36,8 +43,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if a > b:\n",
-    "    c = \"a es mayor a b\""
+    "#Cual sera el valor de a cuando ejecutemos esta celda?\n",
+    "b = 5\n",
+    "b = b + 1\n",
+    "b = b + 3\n",
+    "b = b + 1\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora utilicemos la palabra **if** y veamos que sucede:"
    ]
   },
   {
@@ -46,25 +64,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if a < b:\n",
-    "    c = \"a es menor a b\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "c = 5\n",
+    "if c > 10:\n",
+    "    c = c + 1\n",
+    "    c = c + 3\n",
+    "c = c + 1\n",
     "c"
    ]
   },
@@ -72,9 +76,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solo cambia en valor cuando la condicion que aparece luego de if es verdadera (True).\n",
-    "\n",
-    "Notemos que la palabra if (si en ingles) esta seguida de una condicion y luego de dos puntos (:) y ademas el codigo que esta abajo esta indentado, es decir, esta movido cuatro espacios hacia la derecha. Esto significa que todo ese codigo que esta debajo del if e indentado a la derecha solo va a ser ejecutado si la condicion del if es verdadera."
+    "Cambiemos ahora la condicion del if para que esta sea verdadera y veamos que sucede:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = 0\n",
+    "d = d + 12\n",
+    "if d > 10:\n",
+    "    d = d + 1\n",
+    "    d = d + 3\n",
+    "d = d + 1\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notemos que la palabra **if** (si en ingles) esta seguida de una condicion y luego de dos puntos (:) y ademas el codigo que esta abajo esta indentado, es decir, esta movido cuatro espacios hacia la derecha. Esto significa que todo ese codigo que esta debajo del **if** e indentado a la derecha **solo va a ser ejecutado si la condicion del if es verdadera**."
    ]
   },
   {
@@ -82,6 +106,28 @@
    "metadata": {},
    "source": [
     "### Ejercicio 1:\n",
+    "\n",
+    "Asignar un valor a la variable salario y ver cual es el resultado final cuando ese valor es menor a 5000 y cuando es mayor a 5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "salario = \n",
+    "impuesto = 0.15\n",
+    "if salario >= 5000:\n",
+    "    salario = salario - (salario * impuesto)\n",
+    "salario"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 2:\n",
     "\n",
     "Asignar un valor a la variable edad para que la variable mayor_de_edad obtenga el valor \"SI es mayor de edad\" "
    ]
@@ -95,7 +141,8 @@
     "edad = \n",
     "mayor_de_edad = \"NO es mayor de edad\"\n",
     "if edad >= 18:\n",
-    "    mayor_de_edad = \"SI es mayor de edad\""
+    "    mayor_de_edad = \"SI es mayor de edad\"\n",
+    "mayor_de_edad"
    ]
   },
   {
@@ -104,12 +151,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
+    "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
     "\n",
     "edad = 30 # cualquier edad mayor o igual a 18 seria correcta\n",
     "mayor_de_edad = \"NO es mayor de edad\"\n",
     "if edad >= 18:\n",
-    "    mayor_de_edad = \"SI es mayor de edad\""
+    "    mayor_de_edad = \"SI es mayor de edad\"\n",
+    "mayor_de_edad"
    ]
   },
   {
@@ -125,7 +173,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En el siguiente ejemplo vemos como funcionan las palabras if else. Prueba modificar el valor de la variable mi_numero para ver como cambia el valor de la variable par_o_impar"
+    "### Ejercicio 3:\n",
+    "\n",
+    "Tratemos de adivinar el valor de la variable e:"
    ]
   },
   {
@@ -134,21 +184,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_numero = 6\n",
-    "par_o_impar = \"no se todavia\"\n",
-    "if mi_numero % 2 == 0:\n",
-    "    par_o_impar = \"es par\"\n",
+    "e = 20\n",
+    "e = e + 5\n",
+    "if e < 10:\n",
+    "    e = e + 1\n",
+    "    e = e + 3\n",
     "else:\n",
-    "    par_o_impar = \"es impar\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "par_o_impar"
+    "    e = e - 1\n",
+    "    e = e - 3\n",
+    "e = e + 1\n",
+    "e"
    ]
   },
   {
@@ -162,9 +207,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 2: \n",
+    "### Ejercicio 4: \n",
     "\n",
-    "De forma similar al ejercicio anterior crear un **if else** que haga que la variable positivo_o_negativo tome el valor \"positivo\" o \"negativo\" dependiendo de si el valor de la variable mi_numero es mayor a cero o no."
+    "Crear un **if else** que haga que la variable positivo_o_negativo tome el valor \"Es positivo\" o \"Es negativo\" dependiendo de si el valor de la variable mi_numero es mayor a cero o no."
    ]
   },
   {
@@ -176,6 +221,23 @@
     "mi_numero = -22\n",
     "positivo_o_negativo = \"no se todavia\"\n",
     "# escribir a continuacion tu solucion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#@title Solucion Ejercicio 4 {display-mode:\"form\"}\n",
+    "\n",
+    "mi_numero = -22\n",
+    "positivo_o_negativo = \"no se todavia\"\n",
+    "if mi_numero > 0:\n",
+    "    positivo_o_negativo = \"Es positivo\"\n",
+    "else:\n",
+    "    positivo_o_negativo = \"Es negativo\"\n",
+    "positivo_o_negativo"
    ]
   },
   {
@@ -200,15 +262,8 @@
     "elif mi_numero > 0:\n",
     "    positivo_o_negativo = \"es positivo\"\n",
     "else:\n",
-    "    positivo_o_negativo = \"es negativo\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    positivo_o_negativo = \"es negativo\"\n",
+    "\n",
     "positivo_o_negativo"
    ]
   },
@@ -225,78 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Varias lineas de codigo dentro de los bloques de if elif else\n",
-    "\n",
-    "Ahora veremos ejemplos de que los bloques de lineas de codigo indentadas debajo de los if elif else pueden ser una o varias"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Veamos el ejemplo a continuacion. Como la condicion del if no se cumple, las lineas que estan dentro de el no se ejecutaran. Solo se ejecutaran las dos ultimas que estan afuera del bloque del if porque no estan indentadas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 0\n",
-    "if a > 5:\n",
-    "    a = a + 1\n",
-    "    a = a + 1\n",
-    "    a = a + 1\n",
-    "a = a + 1\n",
-    "a = a + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "En el siguiente ejemplo la condicion del if se cumple por lo que se ejecutaran todas las lineas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 10\n",
-    "if a > 5:\n",
-    "    a = a + 1\n",
-    "    a = a + 1\n",
-    "    a = a + 1\n",
-    "a = a + 1\n",
-    "a = a + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ejercicios:\n",
+    "### Ejercicios extra:\n",
     "\n",
     "Intentar adivinar el resultado de los siguientes ejemplos antes de ejecutarlos y ver su resultado correcto:"
    ]
@@ -305,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Ejemplo 1:***"
+    "***Ejercicio extra 1:***"
    ]
   },
   {
@@ -314,29 +298,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 0\n",
-    "if a > 0:\n",
-    "    a = a + 1\n",
-    "    a = a + 2\n",
-    "a = a + 3\n",
-    "a = a + 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#intenta adivinar el valor\n",
-    "a "
+    "a1 = 0\n",
+    "if a1 > 0:\n",
+    "    a1 = a1 + 1\n",
+    "    a1 = a1 + 2\n",
+    "a1 = a1 + 3\n",
+    "a1 = a1 + 4\n",
+    "a1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Ejemplo 2:***"
+    "***Ejercicio extra 2:***"
    ]
   },
   {
@@ -345,29 +320,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 0\n",
-    "if a >= 0:\n",
-    "    a = a + 1\n",
-    "    a = a + 2\n",
-    "a = a + 3\n",
-    "a = a + 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#intenta adivinar el valor\n",
-    "a "
+    "a2 = 0\n",
+    "if a2 >= 0:\n",
+    "    a2 = a2 + 1\n",
+    "    a2 = a2 + 2\n",
+    "a2 = a2 + 3\n",
+    "a2 = a2 + 4\n",
+    "a2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Ejemplo 3:***"
+    "***Ejercicio extra 3:***"
    ]
   },
   {
@@ -376,32 +342,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = -10\n",
-    "if a < 0:\n",
-    "    a = a + 1\n",
-    "    a = a + 2\n",
+    "a3 = -10\n",
+    "if a3 < 0:\n",
+    "    a3 = a3 + 1\n",
+    "    a3 = a3 + 2\n",
     "else:\n",
-    "    a = a + 10\n",
-    "    a = a + 20\n",
-    "a = a + 1\n",
-    "a = a + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#intenta adivinar el valor\n",
-    "a "
+    "    a3 = a3 + 10\n",
+    "    a3 = a3 + 20\n",
+    "a3 = a3 + 1\n",
+    "a3 = a3 + 1\n",
+    "a3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Ejemplo 4:***"
+    "***Ejercicio extra 4:***"
    ]
   },
   {
@@ -410,25 +367,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 10\n",
-    "if (a < 0) or (a > 20):\n",
-    "    a = a + 1\n",
-    "    a = a + 2\n",
+    "a4 = 10\n",
+    "if (a4 < 0) or (a4 > 20):\n",
+    "    a4 = a4 + 1\n",
+    "    a4 = a4 + 2\n",
     "else:\n",
-    "    a = a + 10\n",
-    "    a = a + 20\n",
-    "a = a + 1\n",
-    "a = a + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#intenta adivinar el valor\n",
-    "a "
+    "    a4 = a4 + 10\n",
+    "    a4 = a4 + 20\n",
+    "a4 = a4 + 1\n",
+    "a4 = a4 + 1\n",
+    "a4"
    ]
   },
   {
