--- a/cursos/espanol/programacion/teoria/4_while.ipynb
+++ b/cursos/espanol/programacion/teoria/4_while.ipynb
@@ -28,15 +28,7 @@
    "source": [
     "a = 0\n",
     "while a > 10:\n",
-    "    a = a + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    a = a + 1\n",
     "a"
    ]
   },
@@ -55,15 +47,7 @@
    "source": [
     "a = 0\n",
     "while a < 5:\n",
-    "    a = a + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    a = a + 1\n",
     "a"
    ]
   },
@@ -94,18 +78,24 @@
    "outputs": [],
    "source": [
     "a = 0\n",
-    "if a < 5:\n",
+    "if a < 5: #esta condicion es Verdadera porque a vale 0\n",
     "    a = a + 1\n",
-    "if a < 5:\n",
+    "    \n",
+    "if a < 5: #esta condicion es Verdadera porque a vale 1\n",
     "    a = a + 1\n",
-    "if a < 5:\n",
+    "    \n",
+    "if a < 5: #esta condicion es Verdadera porque a vale 2\n",
     "    a = a + 1\n",
-    "if a < 5:\n",
+    "    \n",
+    "if a < 5: #esta condicion es Verdadera porque a vale 3\n",
     "    a = a + 1\n",
-    "if a < 5:\n",
+    "    \n",
+    "if a < 5: #esta condicion es Verdadera porque a vale 4\n",
     "    a = a + 1\n",
-    "if a < 5:\n",
+    "    \n",
+    "if a < 5: #esta condicion es Falsa porque a vale 5\n",
     "    a = a + 1\n",
+    "    \n",
     "a"
    ]
   },
@@ -124,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 0\n",
+    "x1 = 0\n",
     "# Escribir a continuacion el while\n"
    ]
   },
@@ -136,10 +126,10 @@
    "source": [
     "#@title Solucion Ejercicio 1 {display-mode:\"form\"}\n",
     "\n",
-    "x = 0\n",
-    "while x<10:\n",
-    "    x = x + 1\n",
-    "x"
+    "x1 = 0\n",
+    "while x1<10:\n",
+    "    x1 = x1 + 1\n",
+    "x1"
    ]
   },
   {
@@ -159,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 0\n",
+    "x2 = 0\n",
     "# Escribir a continuacion el while\n"
    ]
   },
@@ -171,10 +161,10 @@
    "source": [
     "#@title Solucion Ejercicio 2 {display-mode:\"form\"}\n",
     "\n",
-    "x = 0\n",
-    "while x<1000000:\n",
-    "    x = x + 1\n",
-    "x"
+    "x2 = 0\n",
+    "while x2<1000000:\n",
+    "    x2 = x2 + 1\n",
+    "x2"
    ]
   },
   {
@@ -192,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 0\n",
+    "x3 = 0\n",
     "# Escribir a continuacion el while\n"
    ]
   },
@@ -204,10 +194,10 @@
    "source": [
     "#@title Solucion Ejercicio 3 {display-mode:\"form\"}\n",
     "\n",
-    "x = 0\n",
-    "while x<10:\n",
-    "    x = x + 3\n",
-    "x"
+    "x3 = 0\n",
+    "while x3<10:\n",
+    "    x3 = x3 + 3\n",
+    "x3"
    ]
   },
   {
